--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
 </head>
 <body>
 	<div class="mainContainer">
+		<div class="contentContainer">
+			<div class="tweetHeadContainer">
+				<img class="tweetIcon" src="images/social-twitter.png">
+				<div class="tweetNameContainer">
+					<h2 class="tweetName">Tweet title</h2>
+					<p class="tweetTag">@tweettag</p>
+				</div>
+			</div>
+			<div class="tweetContainer">
+				<p class="tweetContent">Tweet content.</p>
+			</div>
+			<div class="tweetFooter">
+				<p class="tweetDateTime">5:05pm - Jan 2014</p>
+			</div>
+		</div>
 	</div>
 </body>
 </html>
