--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<title></title>
+	
+	<script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
 	<script src="js/main.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
