all data appearing in box

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title></title>
-	
+
 	<script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
 	<script src="js/main.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
@@ -11,8 +11,8 @@
 	<div class="mainContainer">
 		<div class="contentContainer">
 			<div class="tweetHeadContainer">
-				<img class="tweetIcon" src="images/social-twitter.png">
-				<div class="tweetNameContainer">
+				<img class="userIcon" src="images/social-twitter.png">
+				<div class="userNameContainer">
 					<h2 class="tweetName">Tweet title</h2>
 					<p class="tweetTag">@tweettag</p>
 				</div>
