--- a/index.html
+++ b/index.html
@@ -12,18 +12,16 @@
 	<div class="mainContainer">
 		<div class="contentContainer">
 			<div class="tweetHeadContainer">
-				<img class="userIcon" src="images/social-twitter.png">
+				<img class="userIcon" src="">
 				<div class="userNameContainer">
-					<h2 class="tweetName">Tweet title</h2>
-					<p class="tweetTag">@tweettag</p>
+					<h2 class="tweetName"></h2>
+					<p class="tweetTag"></p>
 				</div>
 			</div>
 			<div class="tweetContainer">
-				<p class="tweetContent">Tweet content.</p>
+				<p class="tweetContent"></p>
 			</div>
-			<div class="tweetFooter">
-				<p class="tweetDateTime">5:05pm - Jan 2014</p>
-			</div>
+			<p class="tweetDateTime"></p>
 		</div>
 	</div>
 </body>
