--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
-
+	<title>Twitter test</title>
 	<script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/mark.js/7.0.2/jquery.mark.min.js"></script>
 	<script src="http://momentjs.com/downloads/moment.min.js"></script>
 	<script src="js/main.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
