--- a/index.html
+++ b/index.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<meta charset="utf-8" /> 
 <head>
 	<title>Twitter test</title>
 	<script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/mark.js/7.0.2/jquery.mark.min.js"></script>
 	<script src="http://momentjs.com/downloads/moment.min.js"></script>
+	<script src="js/resource.js"></script>
 	<script src="js/main.js"></script>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<div class="mainContainer">
 		<div class="contentContainer">
 			<div class="tweetHeadContainer">
-				<img class="userIcon" src="">
+				<img class="userIcon" src="" alt="">
 				<div class="userNameContainer">
 					<h2 class="tweetName"></h2>
 					<p class="tweetTag"></p>
 				</div>
 			</div>
-			<div class="tweetContainer">
-				<p class="tweetContent"></p>
-			</div>
+			<p class="tweetContent"></p>
 			<p class="tweetDateTime"></p>
 		</div>
 	</div>
